# C-labs

./: README.md
lab2/2 part/: AllApartments.txt  CMakeLists.txt  main.cpp
lab2/2 part/apartments/: CMakeLists.txt  library.cpp  library.h
lab2/First part/: CMakeLists.txt  main.cpp  system.txt
lab2/First part/Planets/: CMakeLists.txt  library.cpp  library.h
lab3/: CMakeLists.txt  main.cpp
lab3/fraction/: CMakeLists.txt  fraction.cpp  fraction.h
lab4/: CMakeLists.txt  main.cpp
lab4/Mystack/: Mystack.h
lab5/: CMakeLists.txt  main.cpp
lab5/Vector/: Myset.h  Vector.h
lab6/: CMakeLists.txt  main.cpp
lab6/polynomial/: polynomial.h
lab6/polynomial/vector/: vector.h
lab7/lab7/: .gitignore  CMakeLists.txt  main.cpp
lab7/lab7/Persons/: CMakeLists.txt  Person.cpp  Person.h  payCheck.cpp  payCheck.h  receipt.cpp  receipt.h  wayBill.cpp  wayBill.h
lab8/: CMakeLists.txt  input.txt  main.cpp  output.txt
